app.css
html {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
}

body {
  font-family: futura, "helvetica neue";
  font-size: 24px;
  margin-bottom: 4em;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
}

.project-editor {
  display: flex;
  flex-direction: column;
  width: 50%;
}

input {
  border-radius: 0.2em;
  height: 1.2em;
  padding: 0.25em;
  font-size: 1em;
  text-align: left;
  flex-grow: 1;
}

div[contenteditable] {
  border: 2px dashed #777;
  border-radius: 0.2em;
  padding: 0.2em;
  margin-top: 0.2em;
  margin-bottom: 0.2em;
  font-size: 0.9em;
  font-family: "Helvetica Neue", sans-serif;
  flex-grow: 1;
}

.form-pair {
  display: flex;
  margin-top: 1em;
  flex-wrap: wrap;
}

.form-pair label {
  width: 8em;
}

.form-pair .value-container {
  flex-grow: 1;
  display: flex;
}

.things-done-value-container {
  flex-direction: column;
}

.hidden {
  display: none !important;
  opacity: 0;
  transition: opacity 1s;
}

#status-message {
  background-color: #ffffee;
  width: 80%;
}

.zoom-protect-container {
  display: flex;
  width: 100%;
  flex-direction: column;
  position: relative;
  align-items: center;
}

.gutter {
  width: 1em;
}

.project-region {
  pointer-events: none;
  fill: hsla(219, 22%, 73%, 0.5);
}

.label {
  pointer-events: none;
}

.plant-layer rect {
  stroke: hsla(0, 0%, 100%, 0.5);
  stroke-width: 1; 
}

.plant-layer rect.plant-backing {
  stroke: none;
}

header {
}

.title {
  font-size: 2em;
}

.view-nav {
  margin-top: 1em;
  margin-bottom: 1em;
  text-align: center;
}

.view-button {
  cursor: pointer;
  margin: 0.25em;
}

.active-view-button {
  font-weight: bold;
  font-size: 1.5em;
}

.github-info {
  margin-top: 2em;
  margin-bottom: 2em;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.github-info input {
  width: 60%;
  height: 2em;
  margin-left: 1em;
  /* padding is not accepted by Firefox here. */
}

.github-info label {
  /* text-align: right; */
}

.github-info button {
  background-color: white;
  padding: 0.5em;
  border-radius: 1em;
  border-width: 1px;
  border-color: #333;
  font-size: 1.2em;
  font-weight: bold;
  /* height: 2.4em; */
  margin-top: 1em;
  cursor: pointer;
  font-family: futura;
  text-transform: uppercase;
}

header {
  margin-bottom: 0.5em;
  margin-left: 1em;
  margin-right: 1em;
}

.explanation {
  font-family: Garamond, Georgia;
  font-size: 0.8em;
}

a {
  color: black;
}

.canvases-container {
  display: flex;
  width: 100%;
  flex-direction: column;
  position: relative;
  align-items: center;
}

#garden-board {
  z-index: 1;
  position: absolute;
}

#garden-board-labels {
  z-index: 2;
  position: absolute;
}

#garden-targets-board {
  position: absolute;
  opacity: 0;
  z-index: 3;
}


.details-layer {
  position: fixed;
  width: 100%;
  z-index: 1000;
  background-color: transparent;
  pointer-events: none;
  top: 0px;
}

.details-box {
  z-index: inherit;
  background-color: white;
  width: 40%;
  min-width: 400px;
  margin-left: 28%;
  margin-top: 100px;
  pointer-events: auto;
  box-shadow: hsla(0, 0%, 0%, 0.25) 0 2px 10px;
  padding: 1em;
  border-radius: 0.4em;
  font-size: 0.8em;
}

.project-details {
  margin-bottom: 1em;
  flex-grow: 1;
}

.project-details > * {
  margin-bottom: 0.5em;
}

.name-link {
  font-size: 1.5em;
  font-weight: bold;
  display: block;
  margin-bottom: 0.5em;
}

.date-link {
  color: white;
  font-weight: bold;
  font-size: 1.1em;
  margin-bottom: 0.5em;
  display: block;
}

.deed-details {
  /*border: 1px dotted;*/
  background-color: #444;
  color: white;
  padding: 0.75em;
  border-radius: 0.25em;
}

.deed-details .name {
}

.deed-plant {
  font-size: 1.5em;
  pointer-events: none;
  height: 40px;
  dy: 40px;
}

.details-top-part {
  display: flex;
  flex-direction: row-reverse;
  align-items: start;
}

.details-box .close-button {
  font-weight: bold;
  font-size: 1.2em;
  cursor: pointer;
  background-color: white;
  padding: 0.5em;
  /*! border-radius: 1em; */
  border-width: 1px;
  border-color: #333;
  font-family: futura;
  margin-bottom: 1.5em;
  min-width: 44px;
  font-family: sans-serif;
  min-height: 44px;
}

.destroyed {
  display: none;
}

.garden {
  background-color: hsl(86, 59%, 58%);
}

@media all and (max-width: 480px) {
  .title {
    font-size: 1em;
  }

  .view-nav {
    font-size: 0.8em;
  }

  .details-layer {
    left: 0;
  }

  .details-box {
    width: 100%;
    margin-left: 0;
    margin-top: 0;
    padding: 1em;
    border-radius: 0;
  }
}

.deed-name {
  cursor: pointer;
  font-size: smaller;
  text-decoration: none;
}

.show-deeds {
  margin-top: 1em;
  text-decoration: underline;
  cursor: pointer;
}

#basic-project-list {
  padding-left: 4em;
  /*padding-right: 2em;*/
}

#list-container {
  max-width: 25em;
}

#list-container .project-details {
  cursor: pointer;
}

#basic-project-list .deeds-root {
  margin-bottom: 1em;
}

#activity-container {
  width: 1000px;
  height: 768px;
}

.group-name text {
  text-anchor: middle;
  fill: #555;
}

.activity {
  fill: hsla(0, 0%, 30%, 0.5);
}

#label-board {
  z-index: 1;
  position: absolute;
}

#activities-canvas {
  z-index: 0;
  position: absolute;
}

#activities-labels {
  z-index: 2;
  position: absolute;
}

#activities-targets-canvas {
  position: absolute;
  opacity: 0;
  z-index: 3;
}

.year {
  width: 100%;
  /* This is important for consistent widths of month sort sections. */
}

.year-labels text {
  fill: hsla(0, 0%, 0%, 0.4);
  text-anchor: middle;
}

#activity-groups {
  transform: translate(100, 0);
}

#activity-board {
  border: 2px dashed #aaa;
}

.date-labels text {
  font-size: 0.5em;
}

@media all and (max-height: 568px) {
  body {
    font-size: 18px;
  }

  header {
    margin-bottom: 0;
  }

  #basic-project-list {
    padding-left: 3em;
    padding-right: 2em;
  }

  #list-container {
    max-width: 100%;
  }

  .name-link {
    font-size: 1.2em;
  }

  .details-box {
    height: 568px;
    padding: 0;
  }
}

#years-root {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.year {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.year-title {
  font-size: 2em;
  font-weight: 500;
  margin-bottom: 0.5em;
}

.month {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.month-root {
  width: 100%;
  /* This is important for consistent widths of month sort sections. */
}

.month-sort-section-root {
  display: flex;
  flex-wrap: wrap;
  width: 80%;
}

.month-sort-section {
  display: flex;
  flex-direction: column;
  align-items: start;
  margin: 1em;
  /* Specifying width here will make this element the width 
 * without the margin added, seemingly even with box-sizing: border-box. */
  max-width: 33%;
  flex-basis: 0;
  flex-grow: 1;
}

.month-sort-section.startDate {
  order: 1;
}

.month-sort-section.shippedDate {
  order: 2;
}

.month-sort-section.lastActiveDate {
  order: 3;
}

.month-sort-name {
  font-weight: bold;
  margin-bottom: 0.5em;
}

.month-title {
  font-size: 2em;
  margin-bottom: 1em;
}

.month-project-root {
  margin-bottom: 1em;
}

#year-container .project-name {
  text-decoration: underline cornflowerblue;
  cursor: pointer;
}

.arrangement-controls {
  /*! display: flex; */
  /*! flex-wrap: wrap; */
}

.arrangement-controls .control-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 1em;
  /* Specifying width here will make this element the width 
 * without the margin added, seemingly even with box-sizing: border-box. */
  /*! max-width: 33%; */
  flex-basis: 0;
  flex-grow: 1;
  /*! width: 10em; */
  margin-top: 0;
}

.arrangement-controls .control-container h3 {
  text-align: center;
  width: 100%;
  margin-top: 0;
  margin-bottom: 0.5em;
  /*! font-weight: normal; */
  /*! font-size: larger; */
  /*! font-style: italic; */
}

.arrangement-controls ul {
  margin: 0;
  list-style-type: none;
  text-align: center;
  width: 100%;
  padding: 0;
}

.arrangement-controls ul li {
  border: 1px solid gray;
  padding: 0.25em;
  cursor: pointer;
}

#year-container .arrangement-controls {
  flex-direction: column;
  align-items: center;
  margin-bottom: 1em;
  justify-content: center;
}

.filters-container {
  display: flex;
  flex-direction: column;
}

.filter-category-root {
  margin-bottom: 1em;
  padding: 0.5em;
  flex-grow: 1;
}

.filter-list {
  max-height: 10em;
  overflow-y: scroll;
  border: 1px solid black;
  /*! border-radius: 0.5em; */
  padding: 1em;
  /*! box-shadow: #666 inset 0 0 6px; */
  display: flex;
  flex-wrap: wrap;
}

.arrangement-controls .category-title {
  text-align: center;
  /*! padding-top: 0; */
  margin-top: 0;
}

.arrangement-controls .criterion.selected {
  font-style: bold;
  background-color: rgb(122, 209, 81);
}

#plain-container {
  max-width: 30em;
}

.instruction {
  font-style: italic;
  margin-bottom: 1em;
  text-align: center;
}

#progress-message {
  text-align: center;
  padding: 0.25em;
  /*! width: 100%; */
  border-radius: 0.25em;
}

#progress-message.active {
  background-color: #fbf878;
}

@media all and (max-height: 320px) {
  .details-box {
    max-height: 240px;
    margin-left: 0;
    margin-top: 0;
    padding: 1em;
    border-radius: 0.4em;
    overflow: scroll;
  }
}

@media all and (max-height: 568px) {
  .details-box {
    max-height: 568px;
    overflow: scroll;
  }

  @media all and (max-width: 568px) {
    .details-box {
      width: 528px;
      padding: 20px;
    }
  }  

  @media all and (max-width: 480px) {
    .details-box {
      width: 440px;
      padding: 20px;
    }
  }

  @media all and (max-width: 320px) {
    .details-box {
      width: 280px;
      padding: 20px;
    }
  }
}

